fix: try just downloads

--- a/k8s/apps/default/cross-seed/app/helmrelease.yaml
+++ b/k8s/apps/default/cross-seed/app/helmrelease.yaml
@@ -87,5 +87,5 @@ spec:
         server: nas.internal
         path: /mnt/nfs/media
         globalMounts:
-          - path: /media/downloads/torrents
-            subPath: downloads/torrents
+          - path: /media/downloads
+            subPath: downloads
