--- a/k8s/apps/default/kustomization.yaml
+++ b/k8s/apps/default/kustomization.yaml
@@ -17,7 +17,7 @@ resources:
   - ./readarr/ks.yaml
   - ./lidarr/ks.yaml
   - ./whisparr/ks.yaml
-  - ./flaresolverr/ks.yaml
+  - ./flare-bypasser/ks.yaml
   - ./deemix/ks.yaml
   - ./slskd/ks.yaml
   - ./recyclarr/ks.yaml
