--- a/k8s/apps/default/flaresolverr/app/helmrelease.yaml
+++ b/k8s/apps/default/flaresolverr/app/helmrelease.yaml
@@ -2,7 +2,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: &app flare-bypasser
+  name: &app flaresolverr
 spec:
   interval: 30m
   chart:
@@ -23,15 +23,15 @@ spec:
       retries: 3
   values:
     controllers:
-      flare-bypasser:
+      flaresolverr:
         strategy: RollingUpdate
         annotations:
           reloader.stakater.com/auto: "true"
         containers:
           app:
             image:
-              repository: ghcr.io/yoori/flare-bypasser
-              tag: main@sha256:e0e188baf13b340d7fbf987e757048c8e4c3bc7f5dfa525c34cf8c601687ec10
+              repository: ghcr.io/flaresolverr/flaresolverr
+              tag: v3.3.21
             resources:
               requests:
                 cpu: 15m
@@ -39,6 +39,7 @@ spec:
     service:
       app:
         controller: *app
+        type: ClusterIP
         ports:
           http:
-            port: 8080
+            port: 8191
