--- a/k8s/apps/default/flaresolverr/ks.yaml
+++ b/k8s/apps/default/flaresolverr/ks.yaml
@@ -2,14 +2,14 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app flare-bypasser
+  name: &app flaresolverr
   namespace: flux-system
 spec:
   targetNamespace: default
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
-  path: ./k8s/apps/default/flare-bypasser/app
+  path: ./k8s/apps/default/flaresolverr/app
   prune: true
   sourceRef:
     kind: GitRepository
