feat: use flaresolverr fork

--- a/k8s/apps/default/flaresolverr/app/helmrelease.yaml
+++ b/k8s/apps/default/flaresolverr/app/helmrelease.yaml
@@ -30,8 +30,8 @@ spec:
         containers:
           app:
             image:
-              repository: ghcr.io/flaresolverr/flaresolverr
-              tag: v3.3.21
+              repository: 21hsmw/flaresolverr
+              tag: nodriver
             resources:
               requests:
                 cpu: 15m
