feat: add animez

--- a/k8s/apps/default/cross-seed/app/externalsecret.yaml
+++ b/k8s/apps/default/cross-seed/app/externalsecret.yaml
@@ -40,6 +40,7 @@ spec:
                3, // ExoticaZ
                4, // MAM
                5, // HappyFappy
+               10, // AnimeZ
             ].map(i => `http://prowlarr.default.svc.cluster.local/$${i}/api?apikey={{ .PROWLARR_API_KEY }}`),
           };
   dataFrom:
