--- a/k8s/apps/default/calibre/ks.yaml
+++ b/k8s/apps/default/calibre/ks.yaml
@@ -2,20 +2,21 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app readarr
+  name: &app calibre
   namespace: flux-system
 spec:
-  targetNamespace: default
+  targetNamespace: media
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
-  path: ./k8s/apps/default/readarr/app
+  path: ./k8s/apps/default/calibre/app
   prune: true
   sourceRef:
     kind: GitRepository
     name: homelab
   wait: false
   interval: 30m
+  retryInterval: 1m
   timeout: 5m
   postBuild:
     substitute:
