--- a/k8s/apps/default/kustomization.yaml
+++ b/k8s/apps/default/kustomization.yaml
@@ -13,7 +13,8 @@ resources:
   - ./autobrr/ks.yaml
   - ./radarr/ks.yaml
   - ./sonarr/ks.yaml
-  - ./readarr/ks.yaml
+  - ./calibre/ks.yaml
+  - ./calibre-web/ks.yaml
   - ./flaresolverr/ks.yaml
   - ./slskd/ks.yaml
   - ./recyclarr/ks.yaml
