--- a/k8s/apps/default/qbittorrent/tools/helmrelease.yaml
+++ b/k8s/apps/default/qbittorrent/tools/helmrelease.yaml
@@ -56,12 +56,12 @@ spec:
         containers:
           unregistered:
             !!merge <<: *container
-            args: ["prune", "--exclude-category", "manual", "--exclude-category", "music", "--exclude-tag", "added:1d", "--include-tag", "unregistered", "--with-data",
+            args: ["prune", "--exclude-category", "manual", "--exclude-category", "music", "--exclude-category", "other", "--exclude-category", "books", "--exclude-category", "audiobooks", "--exclude-tag", "added:1d", "--include-tag", "unregistered", "--with-data",
               # "--dry-run",
             ]
           expired:
             !!merge <<: *container
-            args: ["prune", "--exclude-category", "manual", "--exclude-category", "music", "--exclude-category", "readarr", "--exclude-category", "other", "--exclude-tag", "added:1d", "--exclude-tag", "site:myanonamouse", "--include-tag", "expired", "--with-data",
+            args: ["prune", "--exclude-category", "manual", "--exclude-category", "music", "--exclude-category", "books", "--exclude-category", "audiobooks", "--exclude-category", "other", "--exclude-tag", "added:1d", "--exclude-tag", "site:myanonamouse", "--include-tag", "expired", "--with-data",
               # "--dry-run",
             ]
         pod:
