--- a/k8s/apps/default/qbittorrent/tools/resources/config.yaml
+++ b/k8s/apps/default/qbittorrent/tools/resources/config.yaml
@@ -5,21 +5,21 @@ trackers:
     required_seed_days: 0
   - name: avistaz
     urls: ["avistaz.to"]
-    required_seed_ratio: 0.91
-    required_seed_days: 8.1
+    required_seed_ratio: 1
+    required_seed_days: 30d
   - name: privatehd
     urls: ["privatehd.to"]
-    required_seed_ratio: 0.91
-    required_seed_days: 8.1
+    required_seed_ratio: 1
+    required_seed_days: 30d
   - name: cinemaz
     urls: ["cinemaz.to"]
-    required_seed_ratio: 0.91
-    required_seed_days: 8.1
+    required_seed_ratio: 1
+    required_seed_days: 30d
   - name: exoticaz
     urls: ["exoticaz.to"]
-    required_seed_ratio: 0.91
-    required_seed_days: 8.1
-  - name: animez
+    required_seed_ratio: 1
+    required_seed_days: 30d
+  - name: animetorrents
     urls: ["animetorrents.me"]
-    required_seed_ratio: 0.91
-    required_seed_days: 8.1
+    required_seed_ratio: 1
+    required_seed_days: 30d
