--- a/k8s/apps/default/komga/app/helmrelease.yaml
+++ b/k8s/apps/default/komga/app/helmrelease.yaml
@@ -79,5 +79,5 @@ spec:
         path: /mnt/nfs/media
         globalMounts:
           - path: /media/books
-            subPath: books
+            subPath: downloads/torrents/complete/books
             readOnly: true
