--- a/k8s/apps/default/calibre/ks.yaml
+++ b/k8s/apps/default/calibre/ks.yaml
@@ -5,7 +5,7 @@ metadata:
   name: &app calibre
   namespace: flux-system
 spec:
-  targetNamespace: media
+  targetNamespace: default
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
