fix: template path

--- a/k8s/apps/default/readarr/app/kustomization.yaml
+++ b/k8s/apps/default/readarr/app/kustomization.yaml
@@ -5,5 +5,5 @@ resources:
   - ./pvc.yaml
   - ./externalsecret.yaml
   - ./helmrelease.yaml
-  - ../../../../shared/templates/gatus/guarded
-  - ../../../../shared/templates/volsync
+  - ../../../../templates/gatus/guarded
+  - ../../../../templates/volsync
