--- a/k8s/apps/default/calibre/app/helmrelease.yaml
+++ b/k8s/apps/default/calibre/app/helmrelease.yaml
@@ -95,5 +95,5 @@ spec:
         server: nas.internal
         path: /mnt/nfs/media
         globalMounts:
-          - path: /media/books
-            subPath: downloads/torrents/complete/books
+          - path: /media/calibre
+            subPath: calibre
