--- a/k8s/apps/default/calibre/app/helmrelease.yaml
+++ b/k8s/apps/default/calibre/app/helmrelease.yaml
@@ -31,6 +31,7 @@ spec:
           app:
             args:
               - --port=8081
+              - /calibre
             env:
               HOME: /config
               TZ: Australia/Sydney
@@ -62,8 +63,8 @@ spec:
     defaultPodOptions:
       securityContext:
         runAsNonRoot: true
-        runAsUser: 568
-        runAsGroup: 568
+        runAsUser: 1000
+        runAsGroup: 1000
         seccompProfile: {type: RuntimeDefault}
     service:
       main:
@@ -89,3 +90,7 @@ spec:
         existingClaim: calibre
       tmp:
         type: emptyDir
+      calibre:
+        type: nfs
+        server: nas.internal
+        path: /calibre
