fix: calibre nfs mount

--- a/k8s/apps/default/calibre/app/helmrelease.yaml
+++ b/k8s/apps/default/calibre/app/helmrelease.yaml
@@ -93,4 +93,7 @@ spec:
       calibre:
         type: nfs
         server: nas.internal
-        path: /calibre
+        path: /mnt/nfs
+        globalMounts:
+          - path: /calibre
+            subPath: calibre
