--- a/k8s/apps/default/readarr/app/helmrelease.yaml
+++ b/k8s/apps/default/readarr/app/helmrelease.yaml
@@ -55,8 +55,8 @@ spec:
             resources:
               requests:
                 cpu: 10m
-              limits:
-                memory: 250Mi
+                # limits:
+                #   memory: 250Mi
     defaultPodOptions:
       securityContext:
         runAsNonRoot: true
