fix: enable orphaned

--- a/k8s/apps/default/qbittorrent/tools/helmrelease.yaml
+++ b/k8s/apps/default/qbittorrent/tools/helmrelease.yaml
@@ -71,7 +71,7 @@ spec:
         cronjob:
           !!merge <<: *cronJobSpec
           schedule: "@daily"
-          suspend: true
+          suspend: false
         containers:
           app:
             !!merge <<: *container
