--- a/k8s/apps/default/readarr/app/pvc.yaml
+++ b/k8s/apps/default/readarr/app/pvc.yaml
@@ -3,8 +3,8 @@ kind: PersistentVolumeClaim
 metadata:
   name: readarr
 spec:
-  accessModes: ["ReadWriteMany"]
+  accessModes: ["ReadWriteOnce"]
   resources:
     requests:
       storage: 15Gi
-  storageClassName: ceph-filesystem
+  storageClassName: ceph-block
